# montytrain

./: .gitignore  0104.rs  Cargo.toml
common/: Cargo.toml
common/src/: lib.rs  rng.rs
policy/: Cargo.toml
policy/src/: arch.rs  inputs.rs  loader.rs  main.rs  model.rs  moves.rs  preparer.rs  see.rs  train.rs  trainer.rs
policy/src/data/: loader.rs  reader.rs
policy/src/model/: grab.rs  grab_bwd.cu  grab_fwd.cu  loss.rs  select_affine.rs  select_affine_bwd.cu  select_affine_fwd.cu  single_layer.rs
policy/src/model/loss/: softmax.cu
policy/src/model/select_affine/: bwd.cu  fwd.cu
policy/src/model/single_layer/: bwd.cu  fwd.cu
src/: arch.rs  lib.rs  loader.rs  main.rs  rng.rs
value/: Cargo.toml
value/src/: arch.rs  consts.rs  input.rs  inputs.rs  lib.rs  loader.rs  main.rs  piecethreatbuckets.rs  preparer.rs  save.rs  threat_inputs.rs  threat_mask.rs  threats.rs  trainer.rs
