[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jamie Whiting"]

[workspace]
resolver = "2"
members = ["policy", "common", "value"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[workspace.dependencies]
montyformat = { git = 'https://github.com/official-monty/montyformat.git', tag = "v0.3.0" }
tch = "0.17.0"
