[package]
name = "policy"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[dependencies]
bullet_core = { package = "bullet_core", git = 'https://github.com/jw1912/bullet', rev = "1dbc5880bd90fb69438454ead67462273065688b" }
bullet_cuda_backend = { package = "bullet_cuda_backend", git = 'https://github.com/jw1912/bullet', rev = "1dbc5880bd90fb69438454ead67462273065688b" }
montyformat = "0.9.2"